--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Технология автоматического распознавания образов. OCR-системы.}{Технология автоматического распознавания образов. OCR-системы.}}
+{\texorpdfstring{Нейротехнологии. Решение задач классификации, кластеризации и распознавания образов с помощью нейропакетов.}{Нейротехнологии. Решение задач классификации, кластеризации и распознавания образов с помощью нейропакетов.}}
 \newcommand{\courseName}
 {Программное обеспечение искусственного интеллекта}
 \newcommand{\labNumber}
-{1}
+{4}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
