Fix mistakes and add citations

--- a/CourseWork.tex
+++ b/CourseWork.tex
@@ -15,7 +15,7 @@
 \input{common/styles}    % Стили общие для диссертации и автореферата
 \input{Dissertation/disstyles}           % Стили для диссертации
 \input{Dissertation/userstyles}          % Стили для специфических пользовательских задач
-%\input{biblio/bibliopreamble}% Настройки библиографии из внешнего файла (там же выбор: встроенная или на основе biblatex)
+\input{biblio/bibliopreamble}% Настройки библиографии из внешнего файла (там же выбор: встроенная или на основе biblatex)
 
 \input{Dissertation/inclusioncontrol}    % Управление компиляцией отдельных частей диссертации
 \usepackage[section]{placeins}
@@ -31,6 +31,6 @@
 	\include{CourseWork/introduction} % Введение
 	\include{CourseWork/course}  % Текст работы
 	\include{CourseWork/conclusion} % Заключение
-	%\include{common/references} % Список литературы
+	\include{common/references} % Список литературы
 %	\include{CourseWork/appendix} % Приложения
 \end{document}
