--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -179,6 +179,70 @@
   language = {russian}
 }
 
+@InProceedings{Falk,
+  author = {Фальк, В. Н.},
+  title = {Формальные модели параллельных процессов вычислений в реальном времени},
+  note = {В процессе},
+  language = {russian}
+}
+
+@phdthesis{berry1989real,
+	title={Real time programming: Special purpose or general purpose languages},
+	author={Berry, G{\'e}rard},
+	year={1989},
+	school={INRIA}
+}
+
+@article{van2000domain,
+	title={Domain-specific languages: An annotated bibliography},
+	author={Van Deursen, Arie and Klint, Paul and Visser, Joost},
+	journal={ACM Sigplan Notices},
+	volume={35},
+	number={6},
+	pages={26--36},
+	year={2000},
+	publisher={ACM}
+}
+
+@article{sprinkle2004domain,
+	title={A domain-specific visual language for domain model evolution},
+	author={Sprinkle, Jonathan and Karsai, Gabor},
+	journal={Journal of Visual Languages \& Computing},
+	volume={15},
+	number={3},
+	pages={291--307},
+	year={2004},
+	publisher={Elsevier}
+}
+
+@article{vakhitov2016,
+	title={Перспективные языки программирования},
+	author={Вахитов, Линар Маратович and Мотыгуллин, Искандер Альбертович and Мифтахова, Лина Хатыповна},
+	journal={Естественные и технические науки: опыт, проблемы, перспективы},
+	number={3},
+	pages={34--40},
+	year={2016},
+	publisher={Центр научного знания" Логос"}
+}
+
+@incollection{reddy2017spring,
+	title={Spring Boot with Groovy, Scala, and Kotlin},
+	author={Reddy, K Siva Prasad},
+	booktitle={Beginning Spring Boot 2},
+	pages={259--278},
+	year={2017},
+	publisher={Springer}
+}
+
+@incollection{dea2017appendix,
+	title={Appendix A: References},
+	author={Dea, Carl and Grunwald, Gerrit and Pereda, Jos{\'e} and Phillips, Sean and Heckler, Mark},
+	booktitle={JavaFX 9 by Example},
+	pages={525--549},
+	year={2017},
+	publisher={Springer}
+}
+
 % ГОСТ Р 7.0.11-2011, Приложение Б, Статьи
 
 @ARTICLE{Berestova,
