--- a/common/data.tex
+++ b/common/data.tex
@@ -15,7 +15,7 @@
 \newcommand{\thesisTitle}              % Диссертация, название
 {\texorpdfstring{Проектирование ПО для описания и моделирования вычислительных процессов в динамических системах}{Проектирование ПО для описания и моделирования вычислительных процессов в динамических системах}}
 \newcommand{\courseName}
-{Название Предмета}
+{Программное обеспечение интеллектуальных систем}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
